Fri Nov 11 11:06:19 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/FooTest5/DataReaderListener.cpp:
        * tests/DCPS/FooTest5/Writer.cpp:
        * performance-tests/DCPS/SimpleE2ETest/Reader.cpp:
        * performance-tests/DCPS/SimpleE2ETest/Writer.cpp:

          Removed extra parenthesis in the "#if defined" statement.
          The should fix the compilation problem on Solaris builds.
          
Thu Nov 10 16:35:32 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/Qos_Helper.h:
          Solaris compilers failed when the method declaration was
          extern and the definition was inline.  Added a macro
          to assign the extern when the code is not inlined.

        * performance-tests/DCPS/SimpleE2ETest/Reader.cpp:
        * performance-tests/DCPS/SimpleE2ETest/Writer.cpp:
        * tests/DCPS/FooTest5/DataReaderListener.cpp:
        * tests/DCPS/FooTest5/Writer.cpp:

          Set the VC6 necessary extra unused parameters into
          a typedef'd function declaration.  Solaris compilers
          were choking on the extra parameter in the templated
          method.

        * dds/DCPS/transport/framework/DataLinkSetMap.inl:
        * dds/DCPS/transport/framework/NullSynchStrategy.inl:
          Removed unused files.

Mon Oct 31 16:43:52 2005  Byron Harris  <harris_b@ociweb.com>

        * dds/DCPS/Marked_Default_Qos.cpp:

          Replaced usage of ACE_static_cast<::DDS...> with
          static_cast< ::DDS...> as the <: was confusing the
          Sun CC 5.3 compiler.

Mon Oct 31 16:38:30 2005  Byron Harris  <harris_b@ociweb.com>

        * dds/DCPS/BuiltInTopicUtils.cpp:

          Avoid compiler error generated by Sun CC 5.3 because
          a namespace terminates with a "}".

        * dds/DCPS/DataSampleHeader.h:

          Avoid compiler warning generated by Sun CC 5.3.

Tue Oct 25 17:26:38 MST 2005   Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpAcceptor.cpp: