@@ -1,3 +1,14 @@
+Fri Nov 11 12:51:09 USMST 2005  Yan Dai  <dai_y@ociweb.com>
+
+        * dds/DCPS/DomainParticipantImpl.cpp:
+        
+          Fixed warnings on string (char*) initialization.
+          
+        * dds/DCPS/Qos_Helper.h:
+
+          Used ACE_NAMESPACE_INLINE_FUNCTION for inline functions 
+          declare to fix warnings on Solaris.
+          
 Fri Nov 11 11:06:19 USMST 2005  Yan Dai  <dai_y@ociweb.com>
 
         * tests/DCPS/FooTest5/DataReaderListener.cpp:
